로그인, 회원가입 재구현 및 플라스크 연결 확인